[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
oxrdf = { workspace = true }
oxrdfio = "0.1.3"
thiserror = { workspace = true}