[package]
name = "data_generator"
version = "0.1.119"
readme = "README.md"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
# Core RDF and ShEx/SHACL dependencies
srdf = { workspace = true }
shex_ast = { workspace = true }
shacl_ast = { workspace = true }
shacl_rdf = { workspace = true }
iri_s = { workspace = true }
prefixmap = { workspace = true }
oxrdf = { workspace = true, features = ["oxsdatatypes"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Async and parallelism
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
futures = "0.3"

# Data generation and utilities
rand = "0.8"
rust_decimal = "1.28"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
regex = "1.0"
tokio-test = "0.4"
