[package]
name = "dctap"
version = "0.1.111"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/dctap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
csv = "1.3.1"
# calamine = "0.27"
itertools = "0.14"
iri_s.workspace = true
serde.workspace = true
serde_json = "1.0"
toml = "0.8"
thiserror = "2"
tracing.workspace = true

[dev-dependencies]
tracing-test = "0.2.5"

# [patch.crates-io]
# use fork fixing zip dependency until PR is merged
# calamine = { git = "https://github.com/prophittcorey/calamine", branch = "fix/zip-3.0" }
