[package]
name = "dctap"
version = "0.1.111"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/dctap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
csv.workspace = true
calamine.workspace = true
itertools.workspace = true
iri_s.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true

