[package]
name = "dctap"
version = "0.1.119"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/dctap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
calamine.workspace = true
csv.workspace = true
iri_s.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test.workspace = true

