[package]
name = "generator"
version = "0.1.0"
readme = "README.md"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srdf = { workspace = true }
shacl_ast = { workspace = true }
iri_s = { workspace = true } # needed for defining IriS and vocabs

thiserror = "1.0.63" # needed for the definition of errors
lazy_static = "1" # needed for the definition of the vocab
const_format = "0.2" # needed for the definition of the vocab
indoc = "2" # needed for the definition of SPARQL queries
oxiri = "0.2.0-alpha.2" # TODO: can be removed? (needed for the use of the stores )
clap = { workspace = true } # needed for creating the ValueEnums (ensuring compatibility with clap)
serde = { version = "1.0", features = ["derive"] } # needed for the config thing
serde_yml = "0.0.12" # needed for the config thing

rand = "0.8"
rust_decimal = "1.28"