[package]
name = "generator"
version = "0.1.0"
readme = "README.md"
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srdf = { workspace = true }
shex_ast = { workspace = true }
iri_s = { workspace = true } # needed for defining IriS and vocabs
prefixmap = { workspace = true }
shex_compact ={ workspace = true}

rand = "0.8"
rust_decimal = "1.28"
serde_json = "1.0.129"
oxrdf = { workspace = true, features = ["oxsdatatypes"] }