[package]
name = "iri_s"
version = "0.1.90"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/iri_s"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
oxrdf.workspace = true
oxiri.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "native-tls-vendored",
] }
serde.workspace = true
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
