[package]
name = "iri_s"
version = "0.1.137"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/iri_s"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
getrandom.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true
