[package]
name = "mie"
version = "0.1.102"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/mie"
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
iri_s.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = { workspace = true }
yaml-rust2 = { version = "0.10" }
hashlink = { version = "0.10" }

