[package]
name = "mie"
version = "0.1.118"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/mie"
homepage.workspace = true
repository.workspace = true

[dependencies]
hashlink = { version = "0.10" }
iri_s.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true }
yaml-rust2 = { version = "0.10" }

