[package]
name = "pgschema"
version = "0.1.147"
edition = "2024"
license = "MIT"
description = "Prototype for PG-SChema with property constraints"
homepage = "https://github.com/wesopapers/pgschemapc"
repository = "https://github.com/wesopapers/pgschemapc"
keywords = ["pgschema", "property-graphs", "property-constraints"]
categories = [
    "command-line-utilities",
    "web-programming",
    "parser-implementations",
    "data-structures",
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clientele.workspace = true
colored.workspace = true
csv.workspace = true
either.workspace = true
itertools.workspace = true
regex.workspace = true
rustemo = "0.7.1"
serde.workspace = true
serde_json.workspace = true
text-diff = "0.4.0"
thiserror.workspace = true
time.workspace = true
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2"
rustemo-compiler = "0.7"

[build-dependencies]
rustemo-compiler = "0.7"
