[package]
name = "pgschema"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Prototype for PG-SChema with property constraints"
homepage = "https://github.com/wesopapers/pgschemapc"
repository = "https://github.com/wesopapers/pgschemapc"
keywords = ["pgschema", "property-graphs", "property-constraints"]
categories = [
    "command-line-utilities",
    "web-programming",
    "parser-implementations",
    "data-structures",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
anyhow.workspace = true
clap.workspace = true
clientele.workspace = true
colored.workspace = true
csv.workspace = true
either.workspace = true
itertools.workspace = true
regex.workspace = true
rustemo.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2"
rustemo-compiler = "0.9.1"

[build-dependencies]
rustemo-compiler = "0.9.1"
