[package]
name = "prefixmap"
version = "0.1.145"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/prefixmap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
colored.workspace = true
indexmap.workspace = true
iri_s.workspace = true
serde.workspace = true
thiserror.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
proptest.workspace = true
#bencher.workspace = true