[package]
name = "prefixmap"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/prefixmap"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
colored.workspace = true
indexmap.workspace = true
iri_s.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
proptest.workspace = true
#bencher.workspace = true
