[package]
name = "pyrudof"
version = "0.1.44"
documentation = "https://rudof-project.github.io/rudof/"
readme = "README.md"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
name = "pyrudof"
crate-type = ["cdylib"]

[dependencies]
rudof_lib = { workspace = true }

openssl = { version = "0.10", features = ["vendored"] }

[dependencies.pyo3]
version = "0.22.0"
features = ["abi3-py37", "extension-module"]
