[package]
name = "pyrudof"
version = "0.1.102"
documentation = "https://rudof-project.github.io/rudof/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    "Jose Emilio Labra Gayo <labra@uniovi.es>",
    "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>",
    "Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com>",
]
description = "Python bindings for Rudof"
repository = "https://github.com/rudof-project/rudof"
homepage = "https://rudof-project.github.io/rudof"
keywords = ["rdf", "linked-data", "semantic-web", "shex", "shacl"]
edition = "2024"

[lib]
name = "pyrudof"
crate-type = ["cdylib"]

[dependencies]
rudof_lib.workspace = true

[dependencies.pyo3]
version = "0.26.0"
features = ["abi3-py37", "extension-module"]

[package.metadata.maturin]
include = ["pyrudof.pyi"]
