[package]
name = "pyrudof"
version = "0.1.142"
documentation = "https://rudof-project.github.io/rudof/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    "Jose Emilio Labra Gayo <labra@uniovi.es>",
    "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>",
    "Marc-Antoine Arnaud <marc-antoine.arnaud@luminvent.com>",
]
description = "Python bindings for Rudof"
repository = "https://github.com/rudof-project/rudof"
homepage = "https://rudof-project.github.io/rudof"
keywords = ["rdf", "linked-data", "semantic-web", "shex", "shacl"]
edition = "2024"

[package.metadata.maturin]
include = ["pyrudof.pyi"]

[lib]
name = "pyrudof"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pyo3 = { version = "0.26", features = [
    "abi3-py37",
    "extension-module",
    "experimental-inspect",
] }
# pyo3-stub-gen = { version = "0.16.1" }
# pyo3-stub-gen-derive = { version = "0.16.1" }
pythonize = { version = "0.26.0" }
rudof_lib.workspace = true
rudof_generate.workspace = true
tokio = { version = "1.0", features = ["full"] }
tracing.workspace = true
