[package]
name = "rbe"
version = "0.1.68"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/rbe"
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
hashbag = { version = "0.1.11"}
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
itertools.workspace = true
indexmap = { version = "2"}
tracing = { workspace = true }

[dev-dependencies]
indoc = "2"
