[package]
name = "rbe"
version = "0.1.118"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/rbe"
homepage.workspace = true
repository.workspace = true

[dependencies]
hashbag = { version = "0.1.12" }
indexmap = { version = "2" }
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing = { workspace = true }

[dev-dependencies]
indoc = "2"
