[package]
name = "rbe"
version = "0.1.149"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/rbe"
homepage.workspace = true
repository.workspace = true

[dependencies]
hashbag.workspace = true
indexmap.workspace = true
itertools.workspace = true
pretty.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing = { workspace = true }

[dev-dependencies]
indoc.workspace = true
tracing-test.workspace = true
