[package]
name = "rbe_testsuite"
version = "0.1.60"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rbe_testsuite"
edition.workspace = true
license.workspace = true

[dependencies]
rbe = { workspace = true }
serde.workspace = true
anyhow = "1.0.27"
serde_yaml_ng = "0.10"
tracing = { workspace = true }

[dev-dependencies]
indoc = "2"
