[package]
name = "rbe_testsuite"
version = "0.1.118"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rbe_testsuite"
edition.workspace = true
license.workspace = true

[dependencies]
rbe.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true 

[dev-dependencies]
indoc = "2"
serde_json.workspace = true
pretty_assertions = "1.4.1"
