[package]
name = "rdf"
version = "0.1.146"
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/rdf"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
iri_s.workspace = true
once_cell.workspace = true
oxilangtag.workspace = true
oxrdf.workspace = true
oxsdatatypes.workspace = true
prefixmap.workspace = true
proptest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true